Template of 1st page is added

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="AVT technology"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <title>AVT technology</title>
   </head>
   <body>
