Keywords are added, bg-images are compressed

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="AVT technology"
     />
+    <meta
+      name="keywords"
+      content="ООО АВТ, АВТ, АВТ технология, технология авт, авт ооо, авт штамповка, обработка авт, авт обработка,
+        горячая штамповка латуни, производство фитингов из латуни, объемная штамповка металла, горячая штамповка на заказ">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <title>AVT technology</title>
   </head>
