--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,21 @@
     <meta
       name="keywords"
       content="ООО АВТ, АВТ, АВТ технология, технология авт, авт ооо, авт штамповка, обработка авт, авт обработка,
-        горячая штамповка латуни, производство фитингов из латуни, объемная штамповка металла, горячая штамповка на заказ">
+        горячая штамповка латуни, производство фитингов из латуни, объемная штамповка металла, горячая штамповка на заказ"
+    >
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+    <meta
+      name = "description"
+      content = "Мы производим широкий ассортимент продукции из латуни, алюминия, меди и медных сплавов
+        для различных отраслей промышленности на базе технологии горячей объемной штамповки."
+    >
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>AVT technology</title>
   </head>
   <body>
